start of coding html/scss page

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>layout-designer-project-lvl2 by botirk</title>
+    <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
-    
+    <section id="page-description">
+      <div class="container">
+        <header>
+          <div class="starting-group">
+            <div class="logo-group">
+              <a href="#"><img alt="нота" src="images/logo.svg"/></a>
+              <div class="name name-selected"><a href="#">MUSIC BOX</a></div>
+            </div>
+            <div class="nav-group">
+              <a href="#"><div class="name name-selected">ГЛАВНАЯ</div></a>
+              <a href="#"><div class="name fs-10">КАТАЛОГ</div></a>
+              <a href="#"><div class="name fs-10">ИСПОЛНИТЕЛИ</div></a>
+              <a href="#"><div class="name">КОНТАКТЫ</div></a>
+            </div>
+          </div>
+          <input type="text" placeholder="ПОИСК..." />
+        </header>
+        <div class="container2">
+          
+        </div>
+      </div>
+    </section>
   </body>
 </html>
