second step completed

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,17 @@
           </div>
           <input type="text" placeholder="ПОИСК..." />
         </header>
-        <div class="container2">
-          
+        <div class="container-v">
+          <h1 class="color-white text-center">Онлайн музыка где угодно</h1>
+          <h2 class="color-white text-center">без ограничений</h2>
+          <div class="form-description color-white fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</div>
+          <form>
+            <div>
+              <input class="bg-transparent color-white fs-14" type="text" name="name" placeholder="Имя" />
+              <input class="bg-transparent color-white fs-14" type="email" name="email" placeholder="Email" />
+            </div>
+            <input class="bg-green color-white fs-13" class="color-white" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
+          </form>
         </div>
       </div>
     </section>
