subscription in progress

--- a/src/index.html
+++ b/src/index.html
@@ -38,5 +38,24 @@
         </div>
       </div>
     </section>
+  
+    <section id="page-pricing">
+      <div class="container">
+        <h2 class="color-white">Формы подписки</h2>
+
+        <div class="card-container">
+
+          <div class="card">
+            <h3 class="color-white">Бесплатная</h3>
+            <span class="color-white">0</span>
+            <span class="color-white">РУб</span>
+            <button class="color-white">ОФОРМИТЬ</button>
+            <p class="color-white">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
+          </div>
+          
+        </div>
+      </div>
+      </div>
+    </section>
   </body>
 </html>
