--- a/src/index.html
+++ b/src/index.html
@@ -33,27 +33,51 @@
               <input class="bg-transparent color-white fs-14" type="text" name="name" placeholder="Имя" />
               <input class="bg-transparent color-white fs-14" type="email" name="email" placeholder="Email" />
             </div>
-            <input class="bg-green color-white fs-13" class="color-white" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
+            <input class="button bg-green color-white fs-13" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
           </form>
         </div>
       </div>
     </section>
   
-    <section id="page-pricing">
+    <section id="page-pricing" class="bg-black color-white">
       <div class="container">
-        <h2 class="color-white">Формы подписки</h2>
+        <h2>Формы подписки</h2>
 
         <div class="card-container">
 
           <div class="card">
-            <h3 class="color-white">Бесплатная</h3>
-            <span class="color-white">0</span>
-            <span class="color-white">РУб</span>
-            <button class="color-white">ОФОРМИТЬ</button>
-            <p class="color-white">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
+            <h3>Бесплатная</h3>
+            <p class="price">
+              <span class="fs-64 lh-100">0</span>
+              <span class="fs-32">РУБ.</span>
+            </p>
+            <button class="button color-white fs-16">ОФОРМИТЬ</button>
+            <p class="description fs-13 text-center">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
+          </div>
+
+          <div class="card">
+            <h3>Стандартная</h3>
+            <p class="price">
+              <span class="fs-64 lh-100">250</span>
+              <span class="fs-32">РУБ.</span>
+            </p>
+            <button class="button color-white fs-16">ОФОРМИТЬ</button>
+            <p class="description fs-13 text-center">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве</p>
+          </div>
+
+          <div class="card">
+            <h3>Бесплатная</h3>
+            <p class="price">
+              <span class="fs-64 lh-100">500</span>
+              <span class="fs-32">РУБ.</span>
+            </p>
+            <button class="button color-white fs-16">ОФОРМИТЬ</button>
+            <p class="description fs-13 text-center">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
           </div>
           
         </div>
+
+        <p class="text-center fs-16">На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать все композиции на ваше устройство и слушать музыку без подключения к интернету</p>
       </div>
       </div>
     </section>
