--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
-    <section id="page-description">
+    <section id="page-description" class="color-white">
       <div class="container">
         <header>
           <div class="starting-group">
@@ -25,15 +25,15 @@
           <input type="text" placeholder="ПОИСК..." />
         </header>
         <div class="container-v">
-          <h1 class="color-white text-center">Онлайн музыка где угодно</h1>
-          <h2 class="color-white text-center">без ограничений</h2>
-          <div class="form-description color-white fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</div>
+          <h1 class="text-center">Онлайн музыка где угодно</h1>
+          <h2 class="text-center">без ограничений</h2>
+          <div class="form-description fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</div>
           <form>
             <div>
-              <input class="bg-transparent color-white fs-14" type="text" name="name" placeholder="Имя" />
-              <input class="bg-transparent color-white fs-14" type="email" name="email" placeholder="Email" />
+              <input class="bg-transparent fs-14" type="text" name="name" placeholder="Имя" />
+              <input class="bg-transparent fs-14" type="email" name="email" placeholder="Email" />
             </div>
-            <input class="button bg-green color-white fs-13" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
+            <input class="button bg-green fs-13" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
           </form>
         </div>
       </div>
@@ -51,7 +51,7 @@
               <span class="fs-64 lh-100">0</span>
               <span class="fs-32">РУБ.</span>
             </p>
-            <button class="button color-white fs-16">ОФОРМИТЬ</button>
+            <button class="button fs-16">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
           </div>
 
@@ -61,7 +61,7 @@
               <span class="fs-64 lh-100">250</span>
               <span class="fs-32">РУБ.</span>
             </p>
-            <button class="button color-white fs-16">ОФОРМИТЬ</button>
+            <button class="button fs-16">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве</p>
           </div>
 
@@ -71,7 +71,7 @@
               <span class="fs-64 lh-100">500</span>
               <span class="fs-32">РУБ.</span>
             </p>
-            <button class="button color-white fs-16">ОФОРМИТЬ</button>
+            <button class="button fs-16">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
           </div>
           
@@ -79,6 +79,12 @@
 
         <p class="text-center fs-16">На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать все композиции на ваше устройство и слушать музыку без подключения к интернету</p>
       </div>
+      </div>
+    </section>
+  
+    <section id="page-news" class="bg-black color-white">
+      <div class="container">
+        <h2>ПОСЛЕДНИЕ НОВОСТИ</h2>
       </div>
     </section>
   </body>
