--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,53 @@
     <section id="page-news" class="bg-black color-white">
       <div class="container">
         <h2>ПОСЛЕДНИЕ НОВОСТИ</h2>
+        
+        <div class="news-container">
+          <div class="news-item">
+            <img src="./images/Music to Be Murdered By.png" alt="Эминем с микрофоном">
+            <div class="news-body">
+              <p class="news-header fs-30 fsm-16">Music to Be Murdered By</p>
+              <p class="news-content fs-16">Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20 новых треков.</p>
+              <div class="news-info">
+                <img src="./images/avatar.png" alt="иконка">
+                <p class="color-orange fs-12">MUSIC BOX</p>
+                <p class="color-dark-gray fs-12">17/01/2020</p>
+              </div>
+              <button class="fs-12 bg-transparent color-dark-gray">К АЛЬБОМУ</button>
+            </div>
+          </div>
+
+          <div class="news-item">
+            <img src="./images/Ordinary Man.png" alt="Оззи Осборн">
+            <div class="news-body">
+              <p class="news-header fs-30">Ordinary Man</p>
+              <p class="news-content fs-16">Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на Music Box</p>
+              <div class="news-info">
+                <img src="./images/avatar.png" alt="иконка">
+                <p class="color-orange fs-13">MUSIC BOX</p>
+                <p class="color-dark-gray fs-13">24/02/2020</p>
+              </div>
+              <button class="fs-13 bg-transparent color-dark-gray">К АЛЬБОМУ</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  
+    <section id="page-app" class="bg-black color-white">
+      <div class="container">
+        <h2>МОБИЛЬНОЕ ПРИЛОЖЕНИЕ</h2>
+        <div class="content-container">
+          <div class="text">
+            <p class="fs-16">
+              Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе операционных систем Androind и iOS
+              <br><br>
+              С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать музыку даже без интернета.
+            </p>
+            <button class="button bg-red fs-13">Скачать</button>
+          </div>
+          <img src="images/iphone.png" />
+        </div>
       </div>
     </section>
   </body>
