--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,42 @@
     <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
-    <section id="page-description" class="color-white">
+    <header>
       <div class="container">
-        <header>
+        <div class="header-container">
           <div class="starting-group">
-            <div class="logo-group">
-              <a href="#"><img alt="нота" src="images/logo.svg"/></a>
-              <div class="name name-selected"><a href="#">MUSIC BOX</a></div>
-            </div>
+            <a class="logo-group">
+              <img alt="нота" src="images/logo.svg"/>
+              <div class="color-white">MUSIC BOX</div>
+            </a>
             <div class="nav-group">
-              <a href="#"><div class="name name-selected">ГЛАВНАЯ</div></a>
-              <a href="#"><div class="name fs-10">КАТАЛОГ</div></a>
-              <a href="#"><div class="name fs-10">ИСПОЛНИТЕЛИ</div></a>
-              <a href="#"><div class="name">КОНТАКТЫ</div></a>
+              <a><div class="color-white">ГЛАВНАЯ</div></a>
+              <a><div class="color-dark-gray">КАТАЛОГ</div></a>
+              <a><div class="color-dark-gray">ИСПОЛНИТЕЛИ</div></a>
+              <a><div class="color-dark-gray">КОНТАКТЫ</div></a>
             </div>
           </div>
-          <input type="text" placeholder="ПОИСК..." />
-        </header>
-        <div class="container-v">
-          <h1 class="text-center">Онлайн музыка где угодно</h1>
-          <h2 class="text-center">без ограничений</h2>
-          <div class="form-description fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</div>
-          <form>
-            <div>
-              <input class="bg-transparent fs-14" type="text" name="name" placeholder="Имя" />
-              <input class="bg-transparent fs-14" type="email" name="email" placeholder="Email" />
-            </div>
-            <input class="button bg-green fs-13" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
-          </form>
+          <input type="text" class="color-white bg-dark" placeholder="ПОИСК..." />
         </div>
       </div>
+    </header>
+
+    <section id="page-description" class="color-white">
+      <div class="container">
+        <h1 class="text-center">Онлайн музыка где угодно</h1>
+        <h2 class="text-center">без ограничений</h2>
+
+        <div class="form-description fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</div>
+        <form>
+          <div>
+            <input class="bg-transparent fs-14" type="text" name="name" placeholder="Имя" />
+            <input class="bg-transparent fs-14" type="email" name="email" placeholder="Email" />
+          </div>
+          <input class="button bg-green fs-13" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
+        </form>
+      </div>
     </section>
-  
+
     <section id="page-pricing" class="bg-black color-white">
       <div class="container">
         <h2>Формы подписки</h2>
