artist page-description section done

--- a/src/artist.html
+++ b/src/artist.html
@@ -29,17 +29,16 @@
 
     <section id="page-description" class="color-white">
       <div class="container">
-        <h1 class="text-center">Онлайн музыка где угодно</h1>
-        <h2 class="text-center">без ограничений</h2>
-
-        <div class="form-description fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</div>
-        <form>
-          <div>
-            <input class="bg-transparent fs-14" type="text" name="name" placeholder="Имя" />
-            <input class="bg-transparent fs-14" type="email" name="email" placeholder="Email" />
-          </div>
-          <input class="button bg-green fs-13" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
-        </form>
+        <h1>Morten Harket</h1>
+        <p class="counter fs-16">24 875 поклонников</p>
+        <div class="buttons">
+          <button class="button bg-purple">
+            <img src="images/play-button.svg"><p class="fs-13">МИКС</p>
+          </button>
+          <button class="button bg-red">
+            <img src="images/heart.svg"><p class="fs-13">В ИЗБРАННОЕ</p>
+          </button>
+        </div>
       </div>
     </section>
 
