page-popular-track implemented

--- a/src/artist.html
+++ b/src/artist.html
@@ -35,9 +35,78 @@
           <button class="button bg-purple">
             <img src="images/play-button.svg"><p class="fs-13">МИКС</p>
           </button>
+
           <button class="button bg-red">
             <img src="images/heart.svg"><p class="fs-13">В ИЗБРАННОЕ</p>
           </button>
+        </div>
+      </div>
+    </section>
+
+    <section id="page-popular-track" class="color-white bg-black">
+      <div class="container">
+        <h2 class="fsm-18">ПОПУЛЯРНЫЕ ТРЕКИ</h2>
+
+        <div class="track-container">
+          <div class="track-row">
+            <div class="track">
+              <img src="./images/Wild Seed.png" alt="Wild Seed">
+              <div class="track-info">
+                <p class="fs-13"><b>SPANISH STEP</b></p>
+                <p class="fs-13 color-gray">Morten Harket</p>
+              </div>
+              <p class="track-length fs-13 color-gray">4:07</p>
+            </div>
+            
+            <div class="track">
+              <img src="./images/Letter from Egypt.png" alt="Letter from Egypt">
+              <div class="track-info">
+                <p class="fs-13"><b>WITH YOU - WITH ME</b></p>
+                <p class="fs-13 color-gray">Morten Harket</p>
+              </div>
+              <p class="track-length fs-13 color-gray">3:48</p>
+            </div>
+          </div>
+          
+          <div class="track-row">
+            <div class="track">
+              <img src="./images/Brother.png" alt="Brother">
+              <div class="track-info">
+                <p class="fs-13"><b>BROTHER</b></p>
+                <p class="fs-13 color-gray">Morten Harket</p>
+              </div>
+              <p class="track-length fs-13 color-gray">5:05</p>
+            </div>
+
+            <div class="track">
+              <img src="./images/Wild Seed.png" alt="Wild Seed">
+              <div class="track-info">
+                <p class="fs-13"><b>BRODSKY TUNE</b></p>
+                <p class="fs-13 color-gray">Morten Harket</p>
+              </div>
+              <p class="track-length fs-13 color-gray">4:24</p>
+            </div>
+          </div>
+
+          <div class="track-row">
+            <div class="track">
+              <img src="./images/Letter from Egypt.png" alt="Letter from Egypt">
+              <div class="track-info">
+                <p class="fs-13"><b>DARKSPACE</b></p>
+                <p class="fs-13 color-gray">Morten Harket</p>
+              </div>
+              <p class="track-length fs-13 color-gray">3:45</p>
+            </div>
+
+            <div class="track">
+              <img src="./images/Out of My Hands.png" alt="Out of My Hands">
+              <div class="track-info">
+                <p class="fs-13"><b>BURN MONEY BURN</b></p>
+                <p class="fs-13 color-gray">Morten Harket</p>
+              </div>
+              <p class="track-length fs-13 color-gray">3:52</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
