--- a/src/artist.html
+++ b/src/artist.html
@@ -111,6 +111,106 @@
       </div>
     </section>
 
+    <section id="page-discography" class="color-white bg-black">
+      <div class="container">
+        <h2 class="fsm-18">ДИСКОГРАФИЯ</h2>
+
+        <div class="disc-container">
+          <div class="disc-item">
+            <img src="./images/Brother.png" alt="Brother">
+            <p class="disc-name fs-18"><b>Brother</b></p>
+            <p class="disc-year fs-16 color-gray">2014</p>
+          </div>
+          
+          <div class="disc-item">
+            <img src="./images/Out of My Hands.png" alt="Out of My Hands">
+            <p class="disc-name fs-18"><b>Out Of My Hands</b></p>
+            <p class="disc-year fs-16 color-gray">2012</p>
+          </div>
+
+          <div class="disc-item">
+            <img src="./images/Letter from Egypt.png" alt="Letter from Egypt">
+            <p class="disc-name fs-18"><b>Letter from Egypt</b></p>
+            <p class="disc-year fs-16 color-gray">2008</p>
+          </div>
+
+          <div class="disc-item">
+            <img src="./images/Vogts Villa.png" alt="Vogts Villa">
+            <p class="disc-name fs-18"><b>Vogts Vills</b></p>
+            <p class="disc-year fs-16 color-gray">1996</p>
+          </div>
+
+          <div class="disc-item">
+            <img src="./images/Wild Seed.png" alt="Wild Seed">
+            <p class="disc-name fs-18"><b>Wild Seed</b></p>
+            <p class="disc-year fs-16 color-gray">1995</p>
+          </div>
+
+          <div class="disc-item">
+            <img src="./images/Poetenes Evangelium.png" alt="Poetenes Evangelium">
+            <p class="disc-name fs-18"><b>Poetenes Evangelium</b></p>
+            <p class="disc-year fs-16 color-gray">1993</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="page-similar" class="color-white bg-black">
+      <div class="container">
+        <h2 class="fsm-18">ПОХОЖИЕ ИСПОЛЬНИТЕЛИ</h2>
+
+        <div class="similar-container">
+          <div class="similar-item">
+            <img src="./images/A-ha.png" alt="A-ha">
+            <p class="similar-name fs-18 text-center"><b>A-ha</b></p>
+            <p class="similar-counter fs-16 color-gray text-center">417 086 поклонников</p>
+          </div>
+
+          <div class="similar-item">
+            <img src="./images/Tears for Fears.png" alt="Tears For Fears">
+            <p class="similar-name fs-18 text-center"><b>Tears For Fears</b></p>
+            <p class="similar-counter fs-16 color-gray text-center">434 086 поклонников</p>
+          </div>
+
+          <div class="similar-item">
+            <img src="./images/Duran Duran.png" alt="Duran Duran">
+            <p class="similar-name fs-18 text-center"><b>Duran Duran</b></p>
+            <p class="similar-counter fs-16 color-gray text-center">631 071 поклонник</p>
+          </div>
+
+          <div class="similar-item">
+            <img src="./images/Jack Savoretti.png" alt="Jack Savoretti">
+            <p class="similar-name fs-18 text-center"><b>Jack Savoretti</b></p>
+            <p class="similar-counter fs-16 color-gray text-center">26 857 поклонников</p>
+          </div>
+
+          <div class="similar-item">
+            <img src="./images/Keane.png" alt="Keane">
+            <p class="similar-name fs-18 text-center"><b>Keane</b></p>
+            <p class="similar-counter fs-16 color-gray text-center">1 704 358 поклонников</p>
+          </div>
+
+          <div class="similar-item">
+            <img src="./images/Frank Sinatra.png" alt="Frank Sinatra">
+            <p class="similar-name fs-18 text-center"><b>Frank Sinatra</b></p>
+            <p class="similar-counter fs-16 color-gray text-center">1 653 882 поклонников</p>
+          </div>
+
+          <div class="similar-item">
+            <img src="./images/Paul Young.png" alt="Paul Young">
+            <p class="similar-name fs-18 text-center"><b>Paul Young</b></p>
+            <p class="similar-counter fs-16 color-gray text-center">50 329 поклонников</p>
+          </div>
+
+          <div class="similar-item">
+            <img src="./images/Chris Rea.png" alt="Chris Rea">
+            <p class="similar-name fs-18 text-center"><b>Chris Rea</b></p>
+            <p class="similar-counter fs-16 color-gray text-center">73 351 поклонников</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="color-gray fs-16">
       <div class="container">
         <div class="urls-container">
