--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
 
     <section id="page-description" class="color-white">
       <div class="container">
-        <h1>Онлайн музыка где угодно</h1>
-        <h2>без ограничений</h2>
+        <h1 class="text-center">Онлайн музыка где угодно</h1>
+        <h2 class="text-center">без ограничений</h2>
 
-        <div class="form-description fs-16">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</div>
+        <div class="form-description fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</div>
         <form>
           <div>
             <input class="bg-transparent fs-14" type="text" name="name" placeholder="Имя" />
