--- a/src/artist.html
+++ b/src/artist.html
@@ -33,11 +33,11 @@
         <p class="counter fs-16">24 875 поклонников</p>
         <div class="buttons">
           <button class="button bg-purple">
-            <img src="images/play-button.svg"><p class="fs-13">МИКС</p>
+            <img src="images/play-button.svg" alt="play"><p class="fs-13">МИКС</p>
           </button>
 
           <button class="button bg-red">
-            <img src="images/heart.svg"><p class="fs-13">В ИЗБРАННОЕ</p>
+            <img src="images/heart.svg" alt="like"><p class="fs-13">В ИЗБРАННОЕ</p>
           </button>
         </div>
       </div>
@@ -240,10 +240,10 @@
           <div class="column">
             <h4 class="color-white">ПОДПИСЫВАЙТЕСЬ</h4>
             <div class="icons">
-              <a><img src="images/Google+.png" /></a>
-              <a><img src="images/Twitter.png" /></a>
-              <a><img src="images/Facebook.png" /></a>
-              <a><img src="images/Instagram.png" /></a>
+              <a><img src="images/Google+.png" alt="Google+"/></a>
+              <a><img src="images/Twitter.png" alt="Twitter"/></a>
+              <a><img src="images/Facebook.png" alt="Facebook"/></a>
+              <a><img src="images/Instagram.png" alt="Instagram"/></a>
             </div>
           </div>
         </div>
