--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,6 @@
 
         <p class="text-center fs-16">На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать все композиции на ваше устройство и слушать музыку без подключения к интернету</p>
       </div>
-      </div>
     </section>
   
     <section id="page-news" class="bg-black color-white">
@@ -134,7 +133,7 @@
             </p>
             <button class="button bg-red fs-13">Скачать</button>
           </div>
-          <img src="images/iphone.png" />
+          <img src="images/iphone.png" alt="IPhone"/>
         </div>
       </div>
     </section>
@@ -168,10 +167,10 @@
           <div class="column">
             <h4 class="color-white">ПОДПИСЫВАЙТЕСЬ</h4>
             <div class="icons">
-              <a><img src="images/Google+.png" /></a>
-              <a><img src="images/Twitter.png" /></a>
-              <a><img src="images/Facebook.png" /></a>
-              <a><img src="images/Instagram.png" /></a>
+              <a><img src="images/Google+.png" alt="Google+"/></a>
+              <a><img src="images/Twitter.png" alt="Twitter"/></a>
+              <a><img src="images/Facebook.png" alt="Facebook"/></a>
+              <a><img src="images/Instagram.png" alt="Instagram"/></a>
             </div>
           </div>
         </div>
