--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,13 @@
         <h1 class="text-center">Онлайн музыка где угодно</h1>
         <h2 class="text-center">без ограничений</h2>
 
-        <div class="form-description fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</div>
+        <p class="form-description fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
         <form>
-          <div>
-            <input class="bg-transparent fs-14" type="text" name="name" placeholder="Имя" />
-            <input class="bg-transparent fs-14" type="email" name="email" placeholder="Email" />
+          <div class="form-inputs">
+            <input class="bg-transparent fs-14 br-3" type="text" name="name" placeholder="Имя" />
+            <input class="bg-transparent fs-14 br-3" type="email" name="email" placeholder="Email" />
           </div>
-          <input class="button bg-green fs-13" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
+          <input class="button bg-green fs-13 br-5" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
         </form>
       </div>
     </section>
