--- a/src/artist.html
+++ b/src/artist.html
@@ -32,12 +32,14 @@
         <h1>Morten Harket</h1>
         <p class="counter fs-16">24 875 поклонников</p>
         <div class="buttons">
-          <button class="button bg-purple">
-            <img src="images/play-button.svg" alt="play"><p class="fs-13">МИКС</p>
+          <button class="button bg-purple fs-12-8">
+            <img src="images/play-button.svg" alt="play">
+            <p>МИКС</p>
           </button>
 
-          <button class="button bg-red">
-            <img src="images/heart.svg" alt="like"><p class="fs-13">В ИЗБРАННОЕ</p>
+          <button class="button bg-red fs-12-8">
+            <img src="images/heart.svg" alt="like">
+            <p>В ИЗБРАННОЕ</p>
           </button>
         </div>
       </div>
