--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,16 @@
     <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="color-white fs-11">
       <div class="container">
         <div class="header-container">
-          <div class="starting-group">
-            <a class="logo-group">
+          <div class="header-left">
+            <div class="logo-group">
               <img alt="нота" src="images/logo.svg"/>
-              <div class="color-white">MUSIC BOX</div>
-            </a>
+              <p class="site-name">MUSIC BOX</p>
+            </div>
             <div class="nav-group">
-              <a><div class="color-white">ГЛАВНАЯ</div></a>
+              <a><div>ГЛАВНАЯ</div></a>
               <a><div class="color-dark-gray">КАТАЛОГ</div></a>
               <a><div class="color-dark-gray">ИСПОЛНИТЕЛИ</div></a>
               <a><div class="color-dark-gray">КОНТАКТЫ</div></a>
@@ -29,10 +29,12 @@
 
     <section id="page-description" class="color-white">
       <div class="container">
-        <h1 class="text-center">Онлайн музыка где угодно</h1>
-        <h2 class="text-center">без ограничений</h2>
-
-        <p class="form-description fs-16 text-center">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
+        <h1 class="text-center w-100">
+          Онлайн музыка где угодно
+          <h2 class="text-center">без ограничений</h2>
+        </h1>
+        
+        <p class="form-description fs-16 text-center w-100">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
         <form>
           <div class="form-inputs">
             <input class="bg-transparent fs-14 br-3" type="text" name="name" placeholder="Имя" />
@@ -58,7 +60,7 @@
             <button class="button fs-16">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
           </div>
-          
+
           <div class="card">
             <h3>Стандартная</h3>
             <p class="price">
