--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,10 @@
       </div>
     </header>
 
-    <section id="page-description" class="color-white">
+    <section id="page-description" class="bg-img color-white">
       <div class="container">
-        <h1 class="text-center w-100">
-          Онлайн музыка где угодно
-          <h2 class="text-center">без ограничений</h2>
-        </h1>
+        <h1 class="text-center w-100">Онлайн музыка где угодно</h1>
+        <h2 class="text-center w-100">без ограничений</h2>
         
         <p class="form-description fs-16 text-center w-100">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
         <form>
