background image change

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <section id="page-description" class="background color-white">
+    <section id="page-description" class="guitar-background color-white">
       <div class="container">
         <h1 class="text-center w-100">Онлайн музыка где угодно</h1>
         <h2 class="text-center w-100">без ограничений</h2>
