--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <section id="page-description">
+    <section id="page-description" class="color-white">
       <div class="container">
         <h1 class="text-center w-100">Онлайн музыка где угодно</h1>
         <h2 class="text-center w-100">без ограничений</h2>
@@ -38,7 +38,7 @@
             <input class="bg-transparent fs-14 br-3" type="text" name="name" placeholder="Имя" />
             <input class="bg-transparent fs-14 br-3" type="email" name="email" placeholder="Email" />
           </div>
-          <input class="button bg-green fs-13 br-5" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
+          <input class="btn bg-green fs-13 br-5" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
         </form>
       </div>
     </section>
@@ -55,7 +55,7 @@
               <span class="fs-64 lh-100">0</span>
               <span class="fs-32">РУБ.</span>
             </p>
-            <button class="button fs-16">ОФОРМИТЬ</button>
+            <button class="btn fs-16">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
           </div>
 
@@ -65,7 +65,7 @@
               <span class="fs-64 lh-100">250</span>
               <span class="fs-32">РУБ.</span>
             </p>
-            <button class="button fs-16">ОФОРМИТЬ</button>
+            <button class="btn fs-16">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве</p>
           </div>
 
@@ -75,7 +75,7 @@
               <span class="fs-64 lh-100">500</span>
               <span class="fs-32">РУБ.</span>
             </p>
-            <button class="button fs-16">ОФОРМИТЬ</button>
+            <button class="btn fs-16">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
           </div>
           
@@ -131,7 +131,7 @@
               <br><br>
               С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать музыку даже без интернета.
             </p>
-            <button class="button bg-red fs-13">Скачать</button>
+            <button class="btn bg-red fs-13">Скачать</button>
           </div>
           <img src="images/iphone.png" alt="IPhone"/>
         </div>
