--- a/src/artist.html
+++ b/src/artist.html
@@ -31,13 +31,13 @@
       <div class="container">
         <h1>Morten Harket</h1>
         <p class="counter fs-16">24 875 поклонников</p>
-        <div class="buttons">
-          <button class="button bg-purple fs-12-8">
+        <div class="btns">
+          <button class="btn bg-purple fs-12-8">
             <img src="images/play-button.svg" alt="play">
             <p>МИКС</p>
           </button>
 
-          <button class="button bg-red fs-12-8">
+          <button class="btn bg-red fs-12-8">
             <img src="images/heart.svg" alt="like">
             <p>В ИЗБРАННОЕ</p>
           </button>
