--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
               <span class="fs-64 lh-100">0</span>
               <span class="fs-32">РУБ.</span>
             </p>
-            <button class="btn fs-16">ОФОРМИТЬ</button>
+            <button class="btn w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
           </div>
 
@@ -65,7 +65,7 @@
               <span class="fs-64 lh-100">250</span>
               <span class="fs-32">РУБ.</span>
             </p>
-            <button class="btn fs-16">ОФОРМИТЬ</button>
+            <button class="btn w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве</p>
           </div>
 
@@ -75,7 +75,7 @@
               <span class="fs-64 lh-100">500</span>
               <span class="fs-32">РУБ.</span>
             </p>
-            <button class="btn fs-16">ОФОРМИТЬ</button>
+            <button class="btn w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</button>
             <p class="description fs-13 text-center">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
           </div>
           
