--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
               <br><br>
               С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать музыку даже без интернета.
             </p>
-            <button class="btn bg-red fs-13">Скачать</button>
+            <button class="btn bg-red fs-12-8">Скачать</button>
           </div>
           <img src="images/iphone.png" alt="IPhone"/>
         </div>
