--- a/src/artist.html
+++ b/src/artist.html
@@ -54,7 +54,7 @@
             <div class="track">
               <img src="./images/Wild Seed.png" alt="Wild Seed">
               <div class="track-info">
-                <p class="fs-13"><b>SPANISH STEP</b></p>
+                <h3 class="fs-13"><b>SPANISH STEP</b></h3>
                 <p class="fs-13 color-gray">Morten Harket</p>
               </div>
               <p class="track-length fs-13 color-gray">4:07</p>
@@ -63,7 +63,7 @@
             <div class="track">
               <img src="./images/Letter from Egypt.png" alt="Letter from Egypt">
               <div class="track-info">
-                <p class="fs-13"><b>WITH YOU - WITH ME</b></p>
+                <h3 class="fs-13"><b>WITH YOU - WITH ME</b></h3>
                 <p class="fs-13 color-gray">Morten Harket</p>
               </div>
               <p class="track-length fs-13 color-gray">3:48</p>
@@ -74,7 +74,7 @@
             <div class="track">
               <img src="./images/Brother.png" alt="Brother">
               <div class="track-info">
-                <p class="fs-13"><b>BROTHER</b></p>
+                <h3 class="fs-13"><b>BROTHER</b></h3>
                 <p class="fs-13 color-gray">Morten Harket</p>
               </div>
               <p class="track-length fs-13 color-gray">5:05</p>
@@ -83,7 +83,7 @@
             <div class="track">
               <img src="./images/Wild Seed.png" alt="Wild Seed">
               <div class="track-info">
-                <p class="fs-13"><b>BRODSKY TUNE</b></p>
+                <h3 class="fs-13"><b>BRODSKY TUNE</b></h3>
                 <p class="fs-13 color-gray">Morten Harket</p>
               </div>
               <p class="track-length fs-13 color-gray">4:24</p>
@@ -94,7 +94,7 @@
             <div class="track">
               <img src="./images/Letter from Egypt.png" alt="Letter from Egypt">
               <div class="track-info">
-                <p class="fs-13"><b>DARKSPACE</b></p>
+                <h3 class="fs-13"><b>DARKSPACE</b></h3>
                 <p class="fs-13 color-gray">Morten Harket</p>
               </div>
               <p class="track-length fs-13 color-gray">3:45</p>
@@ -103,7 +103,7 @@
             <div class="track">
               <img src="./images/Out of My Hands.png" alt="Out of My Hands">
               <div class="track-info">
-                <p class="fs-13"><b>BURN MONEY BURN</b></p>
+                <h3 class="fs-13"><b>BURN MONEY BURN</b></h3>
                 <p class="fs-13 color-gray">Morten Harket</p>
               </div>
               <p class="track-length fs-13 color-gray">3:52</p>
