changed makefile & packages

--- a/src/artist.html
+++ b/src/artist.html
@@ -54,19 +54,19 @@
             <div class="track">
               <img src="./images/Wild Seed.png" alt="Wild Seed">
               <div class="track-info">
-                <h3 class="fs-13"><b>SPANISH STEP</b></h3>
-                <p class="fs-13 color-gray">Morten Harket</p>
+                <h3 class="fs-12-8"><b>SPANISH STEP</b></h3>
+                <p class="fs-12-8 color-gray">Morten Harket</p>
               </div>
-              <p class="track-length fs-13 color-gray">4:07</p>
+              <p class="track-length fs-12-8 color-gray">4:07</p>
             </div>
             
             <div class="track">
               <img src="./images/Letter from Egypt.png" alt="Letter from Egypt">
               <div class="track-info">
-                <h3 class="fs-13"><b>WITH YOU - WITH ME</b></h3>
-                <p class="fs-13 color-gray">Morten Harket</p>
+                <h3 class="fs-12-8"><b>WITH YOU - WITH ME</b></h3>
+                <p class="fs-12-8 color-gray">Morten Harket</p>
               </div>
-              <p class="track-length fs-13 color-gray">3:48</p>
+              <p class="track-length fs-12-8 color-gray">3:48</p>
             </div>
           </div>
           
@@ -74,19 +74,19 @@
             <div class="track">
               <img src="./images/Brother.png" alt="Brother">
               <div class="track-info">
-                <h3 class="fs-13"><b>BROTHER</b></h3>
-                <p class="fs-13 color-gray">Morten Harket</p>
+                <h3 class="fs-12-8"><b>BROTHER</b></h3>
+                <p class="fs-12-8 color-gray">Morten Harket</p>
               </div>
-              <p class="track-length fs-13 color-gray">5:05</p>
+              <p class="track-length fs-12-8 color-gray">5:05</p>
             </div>
 
             <div class="track">
               <img src="./images/Wild Seed.png" alt="Wild Seed">
               <div class="track-info">
-                <h3 class="fs-13"><b>BRODSKY TUNE</b></h3>
-                <p class="fs-13 color-gray">Morten Harket</p>
+                <h3 class="fs-12-8"><b>BRODSKY TUNE</b></h3>
+                <p class="fs-12-8 color-gray">Morten Harket</p>
               </div>
-              <p class="track-length fs-13 color-gray">4:24</p>
+              <p class="track-length fs-12-8 color-gray">4:24</p>
             </div>
           </div>
 
@@ -94,19 +94,19 @@
             <div class="track">
               <img src="./images/Letter from Egypt.png" alt="Letter from Egypt">
               <div class="track-info">
-                <h3 class="fs-13"><b>DARKSPACE</b></h3>
-                <p class="fs-13 color-gray">Morten Harket</p>
+                <h3 class="fs-12-8"><b>DARKSPACE</b></h3>
+                <p class="fs-12-8 color-gray">Morten Harket</p>
               </div>
-              <p class="track-length fs-13 color-gray">3:45</p>
+              <p class="track-length fs-12-8 color-gray">3:45</p>
             </div>
 
             <div class="track">
               <img src="./images/Out of My Hands.png" alt="Out of My Hands">
               <div class="track-info">
-                <h3 class="fs-13"><b>BURN MONEY BURN</b></h3>
-                <p class="fs-13 color-gray">Morten Harket</p>
+                <h3 class="fs-12-8"><b>BURN MONEY BURN</b></h3>
+                <p class="fs-12-8 color-gray">Morten Harket</p>
               </div>
-              <p class="track-length fs-13 color-gray">3:52</p>
+              <p class="track-length fs-12-8 color-gray">3:52</p>
             </div>
           </div>
         </div>
