--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             <input class="bg-transparent fs-14 br-3" type="text" name="name" placeholder="Имя" />
             <input class="bg-transparent fs-14 br-3" type="email" name="email" placeholder="Email" />
           </div>
-          <input class="btn bg-green fs-13 br-5" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
+          <input class="btn bg-green fs-12-8 br-5" type="submit" value="ПОЛУЧИТЬ ДОСТУП"/>
         </form>
       </div>
     </section>
@@ -56,7 +56,7 @@
               <span class="fs-32">РУБ.</span>
             </p>
             <button class="btn w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</button>
-            <p class="description fs-13 text-center">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
+            <p class="description fs-12-8 text-center">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
           </div>
 
           <div class="card">
@@ -66,7 +66,7 @@
               <span class="fs-32">РУБ.</span>
             </p>
             <button class="btn w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</button>
-            <p class="description fs-13 text-center">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве</p>
+            <p class="description fs-12-8 text-center">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве</p>
           </div>
 
           <div class="card">
@@ -76,7 +76,7 @@
               <span class="fs-32">РУБ.</span>
             </p>
             <button class="btn w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</button>
-            <p class="description fs-13 text-center">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
+            <p class="description fs-12-8 text-center">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
           </div>
           
         </div>
@@ -111,10 +111,10 @@
               <p class="news-content fs-16">Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на Music Box</p>
               <div class="news-info">
                 <img src="./images/avatar.png" alt="иконка">
-                <p class="color-orange fs-13">MUSIC BOX</p>
-                <p class="color-dark-gray fs-13">24/02/2020</p>
+                <p class="color-orange fs-12-8">MUSIC BOX</p>
+                <p class="color-dark-gray fs-12-8">24/02/2020</p>
               </div>
-              <button class="fs-13 bg-transparent color-dark-gray">К АЛЬБОМУ</button>
+              <button class="fs-12-8 bg-transparent color-dark-gray">К АЛЬБОМУ</button>
             </div>
           </div>
         </div>
