--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
           <div class="news-item">
             <img src="./images/Music to Be Murdered By.png" alt="Эминем с микрофоном">
             <div class="news-body">
-              <h3 class="news-header fs-30 fsm-16">Music to Be Murdered By</h3>
+              <h3 class="news-header fs-30 capitalize">Music to Be Murdered By</h3>
               <p class="news-content fs-16">Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20 новых треков.</p>
               <div class="news-info">
                 <img src="./images/avatar.png" alt="иконка">
@@ -107,7 +107,7 @@
           <div class="news-item">
             <img src="./images/Ordinary Man.png" alt="Оззи Осборн">
             <div class="news-body">
-              <h3 class="news-header fs-30">Ordinary Man</h3>
+              <h3 class="news-header fs-30 capitalize">Ordinary Man</h3>
               <p class="news-content fs-16">Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на Music Box</p>
               <div class="news-info">
                 <img src="./images/avatar.png" alt="иконка">
