--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
                 <p class="color-orange fs-12">MUSIC BOX</p>
                 <p class="color-dark-gray fs-12">17/01/2020</p>
               </div>
-              <button class="fs-12 bg-transparent color-dark-gray">К АЛЬБОМУ</button>
+              <a class="btn fs-12 bg-transparent color-dark-gray">К АЛЬБОМУ</a>
             </div>
           </div>
 
@@ -114,7 +114,7 @@
                 <p class="color-orange fs-12-8">MUSIC BOX</p>
                 <p class="color-dark-gray fs-12-8">24/02/2020</p>
               </div>
-              <button class="fs-12-8 bg-transparent color-dark-gray">К АЛЬБОМУ</button>
+              <a class="btn fs-12-8 bg-transparent color-dark-gray">К АЛЬБОМУ</a>
             </div>
           </div>
         </div>
