uppercase to artist

--- a/src/artist.html
+++ b/src/artist.html
@@ -7,18 +7,18 @@
     <link href="css/artist.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="color-white fs-11">
       <div class="container">
         <div class="header-container">
-          <div class="starting-group">
-            <a class="logo-group">
+          <div class="header-left">
+            <div class="logo-group">
               <img alt="нота" src="images/logo.svg"/>
-              <div class="color-white">MUSIC BOX</div>
-            </a>
+              <p class="site-name">MUSIC BOX</p>
+            </div>
             <div class="nav-group">
-              <a><div class="color-gray">ГЛАВНАЯ</div></a>
+              <a><div>ГЛАВНАЯ</div></a>
               <a><div class="color-dark-gray">КАТАЛОГ</div></a>
-              <a><div class="color-white">ИСПОЛНИТЕЛИ</div></a>
+              <a><div class="color-dark-gray">ИСПОЛНИТЕЛИ</div></a>
               <a><div class="color-dark-gray">КОНТАКТЫ</div></a>
             </div>
           </div>
