discography mobile fixing

--- a/src/artist.html
+++ b/src/artist.html
@@ -115,7 +115,7 @@
 
     <section id="page-discography" class="color-white bg-black">
       <div class="container">
-        <h2 class="fsm-18">ДИСКОГРАФИЯ</h2>
+        <h2 class="w-100 fsm-18">ДИСКОГРАФИЯ</h2>
 
         <div class="disc-container">
           <div class="disc-item">
@@ -164,7 +164,7 @@
         <div class="similar-container">
           <div class="similar-item">
             <img src="./images/A-ha.png" alt="A-ha">
-            <h3 class="similar-name fs-18 text-center"><b>A-ha</b></p>
+            <h3 class="similar-name fs-18 text-center">A-ha</h3>
             <p class="similar-counter fs-16 color-gray text-center">417 086 поклонников</p>
           </div>
 
