--- a/src/artist.html
+++ b/src/artist.html
@@ -159,55 +159,55 @@
 
     <section id="page-similar" class="color-white bg-black">
       <div class="container">
-        <h2 class="fsm-18">ПОХОЖИЕ ИСПОЛЬНИТЕЛИ</h2>
+        <h2 class="w-100 fsm-18">ПОХОЖИЕ ИСПОЛЬНИТЕЛИ</h2>
 
         <div class="similar-container">
           <div class="similar-item">
             <img src="./images/A-ha.png" alt="A-ha">
             <h3 class="similar-name fs-18 text-center">A-ha</h3>
-            <p class="similar-counter fs-16 color-gray text-center">417 086 поклонников</p>
+            <p class="fs-16 color-gray text-center">417 086 поклонников</p>
           </div>
 
           <div class="similar-item">
             <img src="./images/Tears for Fears.png" alt="Tears For Fears">
             <h3 class="similar-name fs-18 text-center">Tears For Fears</h3>
-            <p class="similar-counter fs-16 color-gray text-center">434 086 поклонников</p>
+            <p class="fs-16 color-gray text-center">434 086 поклонников</p>
           </div>
 
           <div class="similar-item">
             <img src="./images/Duran Duran.png" alt="Duran Duran">
             <h3 class="similar-name fs-18 text-center">Duran Duran</h3>
-            <p class="similar-counter fs-16 color-gray text-center">631 071 поклонник</p>
+            <p class="fs-16 color-gray text-center">631 071 поклонник</p>
           </div>
 
           <div class="similar-item">
             <img src="./images/Jack Savoretti.png" alt="Jack Savoretti">
             <h3 class="similar-name fs-18 text-center">Jack Savoretti</h3>
-            <p class="similar-counter fs-16 color-gray text-center">26 857 поклонников</p>
+            <p class="fs-16 color-gray text-center">26 857 поклонников</p>
           </div>
 
           <div class="similar-item">
             <img src="./images/Keane.png" alt="Keane">
             <h3 class="similar-name fs-18 text-center">Keane</h3>
-            <p class="similar-counter fs-16 color-gray text-center">1 704 358 поклонников</p>
+            <p class="fs-16 color-gray text-center">1 704 358 поклонников</p>
           </div>
 
           <div class="similar-item">
             <img src="./images/Frank Sinatra.png" alt="Frank Sinatra">
             <h3 class="similar-name fs-18 text-center">Frank Sinatra</h3>
-            <p class="similar-counter fs-16 color-gray text-center">1 653 882 поклонников</p>
+            <p class="fs-16 color-gray text-center">1 653 882 поклонников</p>
           </div>
 
           <div class="similar-item">
             <img src="./images/Paul Young.png" alt="Paul Young">
             <h3 class="similar-name fs-18 text-center">Paul Young</h3>
-            <p class="similar-counter fs-16 color-gray text-center">50 329 поклонников</p>
+            <p class="fs-16 color-gray text-center">50 329 поклонников</p>
           </div>
 
           <div class="similar-item">
             <img src="./images/Chris Rea.png" alt="Chris Rea">
             <h3 class="similar-name fs-18 text-center">Chris Rea</h3>
-            <p class="similar-counter fs-16 color-gray text-center">73 351 поклонников</p>
+            <p class="fs-16 color-gray text-center">73 351 поклонников</p>
           </div>
         </div>
       </div>
