--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
   
     <section id="page-news" class="bg-black color-white">
       <div class="container">
-        <h2>ПОСЛЕДНИЕ НОВОСТИ</h2>
+        <h2 class="w-100 text-center">ПОСЛЕДНИЕ НОВОСТИ</h2>
         
         <div class="news-container">
           <div class="news-item">
