--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
       </div>
     </section>
 
-    <footer class="color-gray fs-16">
+    <footer class="container color-gray fs-16">
       <div class="container">
         <div class="urls-container">
           <div class="column">
@@ -162,9 +162,7 @@
             </div>
           </div>
         </div>
-      </div>
-      <hr>
-      <div class="container">
+        <hr>
         <div class="end-container">
           <a class="fs-16">Магазин</a>
           <a class="fs-16">Обслуживание</a>
