--- a/src/artist.html
+++ b/src/artist.html
@@ -24,18 +24,20 @@
     </header>
 
     <section id="page-description" class="container">
-      <h1>Morten Harket</h1>
-      <p class="counter fs-16">24 875 поклонников</p>
-      <div class="btns">
-        <button class="btn bg-purple fs-12-8">
-          <img src="images/play-button.svg" alt="play">
-          <p>МИКС</p>
-        </button>
+      <div class="container">
+        <h1>Morten Harket</h1>
+        <p class="counter fs-16">24 875 поклонников</p>
+        <div class="btns">
+          <button class="btn bg-purple fs-12-8">
+            <img src="images/play-button.svg" alt="play">
+            <p>МИКС</p>
+          </button>
 
-        <button class="btn bg-red fs-12-8">
-          <img src="images/heart.svg" alt="like">
-          <p>В ИЗБРАННОЕ</p>
-        </button>
+          <button class="btn bg-red fs-12-8">
+            <img src="images/heart.svg" alt="like">
+            <p>В ИЗБРАННОЕ</p>
+          </button>
+        </div>
       </div>
     </section>
 
