--- a/src/artist.html
+++ b/src/artist.html
@@ -25,17 +25,17 @@
 
     <section id="page-description" class="container">
       <div class="container">
-        <h1>Morten Harket</h1>
-        <p class="counter fs-16">24 875 поклонников</p>
+        <h1 class="w-100">Morten Harket</h1>
+        <p class="counter w-100 fs-16">24 875 поклонников</p>
         <div class="btns">
           <button class="btn bg-purple fs-12-8">
             <img src="images/play-button.svg" alt="play">
-            <p>МИКС</p>
+            МИКС
           </button>
 
           <button class="btn bg-red fs-12-8">
             <img src="images/heart.svg" alt="like">
-            <p>В ИЗБРАННОЕ</p>
+            В ИЗБРАННОЕ
           </button>
         </div>
       </div>
