--- a/src/artist.html
+++ b/src/artist.html
@@ -13,12 +13,12 @@
           <img alt="нота" src="images/logo.svg"/>
           <p class="site-name">MUSIC BOX</p>
         </div>
-        <div class="nav-group">
-          <a><div>ГЛАВНАЯ</div></a>
-          <a><div class="color-dark-gray">КАТАЛОГ</div></a>
-          <a><div class="color-dark-gray">ИСПОЛНИТЕЛИ</div></a>
-          <a><div class="color-dark-gray">КОНТАКТЫ</div></a>
-        </div>
+        <ul class="nav-group">
+          <li><a>ГЛАВНАЯ</a></li>
+          <li class="color-dark-gray"><a>КАТАЛОГ</a></li>
+          <li class="color-dark-gray"><a>ИСПОЛНИТЕЛИ</a></li>
+          <li class="color-dark-gray"><a>КОНТАКТЫ</a></li>
+        </ul>
       </div>
       <input type="text" class="color-white bg-dark" placeholder="ПОИСК..." />
     </header>
