--- a/src/artist.html
+++ b/src/artist.html
@@ -7,17 +7,17 @@
     <link href="css/artist.css" rel="stylesheet">
   </head>
   <body class="bg-black color-white">
-    <header class="container fs-11">
+    <header class="container fs-11 color-white">
       <div class="header-left">
         <div class="logo-group">
           <img alt="нота" src="images/logo.svg"/>
           <p class="site-name">MUSIC BOX</p>
         </div>
         <ul>
-          <li><a>ГЛАВНАЯ</a></li>
-          <li class="color-dark-gray"><a>КАТАЛОГ</a></li>
-          <li class="color-dark-gray"><a>ИСПОЛНИТЕЛИ</a></li>
-          <li class="color-dark-gray"><a>КОНТАКТЫ</a></li>
+          <li><a href="/" class="color-dark-gray">ГЛАВНАЯ</a></li>
+          <li><a class="color-dark-gray">КАТАЛОГ</a></li>
+          <li><a>ИСПОЛНИТЕЛИ</a></li>
+          <li><a class="color-dark-gray">КОНТАКТЫ</a></li>
         </ul>
       </div>
       <input type="text" class="color-white bg-dark" placeholder="ПОИСК..." />
