--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,20 @@
     <link href="css/index.css" rel="stylesheet">
   </head>
   <body class="bg-black">
-    <header class="container color-white fs-11">
+    <header class="container fs-11 color-white">
       <div class="header-left">
         <div class="logo-group">
           <img alt="нота" src="images/logo.svg"/>
           <p class="site-name">MUSIC BOX</p>
         </div>
-        <div class="nav-group">
-          <a><div>ГЛАВНАЯ</div></a>
-          <a><div class="color-dark-gray">КАТАЛОГ</div></a>
-          <a><div class="color-dark-gray">ИСПОЛНИТЕЛИ</div></a>
-          <a><div class="color-dark-gray">КОНТАКТЫ</div></a>
-        </div>
+        <ul>
+          <li><a>ГЛАВНАЯ</a></li>
+          <li class="color-dark-gray"><a>КАТАЛОГ</a></li>
+          <li class="color-dark-gray"><a href="/artist.html">ИСПОЛНИТЕЛИ</a></li>
+          <li class="color-dark-gray"><a>КОНТАКТЫ</a></li>
+        </ul>
       </div>
-      <input type="text" class="color-white bg-dark" placeholder="ПОИСК..." />
+      <input type="text" class="bg-dark" placeholder="ПОИСК..." />
     </header>
 
     <section id="page-description" class="container color-white">
