--- a/src/index.html
+++ b/src/index.html
@@ -38,37 +38,37 @@
     </section>
 
     <section id="page-pricing" class="container color-white">
-      <h2>Формы подписки</h2>
+      <h2 class="text-center w-100">Формы подписки</h2>
 
       <div class="card-container">
 
         <div class="card">
-          <h3>Бесплатная</h3>
+          <h3 class="text-center w-100">Бесплатная</h3>
           <p class="price">
             <span class="fs-64 lh-100">0</span>
             <span class="fs-32">РУБ.</span>
           </p>
-          <button class="btn w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</button>
+          <a class="btn text-center w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</a>
           <p class="description fs-12-8 text-center">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
         </div>
 
         <div class="card">
-          <h3>Стандартная</h3>
+          <h3 class="text-center w-100">Стандартная</h3>
           <p class="price">
             <span class="fs-64 lh-100">250</span>
             <span class="fs-32">РУБ.</span>
           </p>
-          <button class="btn w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</button>
+          <a class="btn text-center w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</a>
           <p class="description fs-12-8 text-center">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве</p>
         </div>
 
         <div class="card">
-          <h3>Бесплатная</h3>
+          <h3 class="text-center w-100">Бесплатная</h3>
           <p class="price">
             <span class="fs-64 lh-100">500</span>
             <span class="fs-32">РУБ.</span>
           </p>
-          <button class="btn w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</button>
+          <a class="btn text-center w-100 fs-16 br-5 bg-transparent">ОФОРМИТЬ</a>
           <p class="description fs-12-8 text-center">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
         </div>
         
