--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 
         <div class="card">
           <h3 class="text-center w-100">Бесплатная</h3>
-          <p class="price">
+          <p class="price w-100">
             <span class="fs-64 lh-100">0</span>
             <span class="fs-32">РУБ.</span>
           </p>
@@ -54,7 +54,7 @@
 
         <div class="card">
           <h3 class="text-center w-100">Стандартная</h3>
-          <p class="price">
+          <p class="price w-100">
             <span class="fs-64 lh-100">250</span>
             <span class="fs-32">РУБ.</span>
           </p>
@@ -64,7 +64,7 @@
 
         <div class="card">
           <h3 class="text-center w-100">Бесплатная</h3>
-          <p class="price">
+          <p class="price w-100">
             <span class="fs-64 lh-100">500</span>
             <span class="fs-32">РУБ.</span>
           </p>
