--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
           <div class="column">
             <h2 class="color-white fs-18">Контакты</h2>
             <a>hello@music.box</a>
-            <a>Russia, Moscow. Music Box studio</a>
+            <p>Russia, Moscow. Music Box studio</p>
             <a>+ 7 499 999 99 99</a>
           </div>
     
