--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
       </div>
     </section>
 
-    <footer class="container color-gray fs-16">
+    <footer class="color-gray fs-16">
       <div class="container">
         <div class="urls-container">
 
