--- a/src/artist.html
+++ b/src/artist.html
@@ -203,7 +203,7 @@
       </div>
     </section>
 
-    <footer class="container color-gray fs-16">
+    <footer class="color-gray fs-16">
       <div class="container">
         <div class="urls-container">
 
@@ -245,7 +245,9 @@
           </div>
           
         </div>
-        <hr class="bg-white">
+      </div>
+      <hr class="bg-white">
+      <div class="container">
         <div class="end-container">
           <a>Магазин</a>
           <a>Обслуживание</a>
