--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <section id="page-description" class="container color-white">
+      <div class="mobile-50"></div>
       <h1 class="text-center w-100">Онлайн музыка где угодно</h1>
       <h2 class="text-center w-100">без ограничений</h2>
       
